# rdk_x5_imx477_4k

./: LICENSE  README.md
pipeline/src/imx477_dual_camera/: CMakeLists.txt  package.xml
pipeline/src/imx477_dual_camera/launch/: dual_camera.launch.py
pipeline/src/imx477_dual_camera/src/: imx477_dual_camera_node.cpp
pipeline/src/imx477_vps_resizer/: CMakeLists.txt  package.xml
pipeline/src/imx477_vps_resizer/launch/: vps_resizer.launch.py
pipeline/src/imx477_vps_resizer/src/: vps_resizer_node.cpp
python/: dnn_imx477_1080.launch.py
services/: imx477-pipeline.service  imx477-pipeline.sh
