<?xml version="1.0"?>
<package format="3">
  <name>imx477_dual_camera</name>
  <version>0.0.1</version>
  <description>IMX477 4K capture</description>

  <maintainer email="contact@boldizsarfodor.com">Boldizsár Fodor</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>hbm_img_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
